03-SSL-Uygulama/Whoami/02-Production/01-Whoami-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-uygulama
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-uygulama
  template:
    metadata:
      labels:
        app: whoami-uygulama
    spec:
      containers:
      - name: whoami-konteyneri
        image: containous/whoami
