03-SSL-Uygulama/Whoami/02-Production/02-Whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-servisi
  labels:
    app: whoami-uygulama
spec:
  type: NodePort
  selector:
    app: whoami-uygulama
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
