03-SSL-Uygulama/Whoami/02-Production/05-Ingress-SSL-Production.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - whoami.techakademi.com
    secretName: whoami-uygulama-tls-production
  rules:
  - host: whoami.techakademi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-servisi
            port:
              number: 80
